# FTXUI

./: .gitignore  BUILD.bazel  MODULE.bazel  annotated.html  annotated.js  button_8cpp_source.html  classes.html  classftxui_1_1ScreenInteractive.html  component_8hpp.html  component_8hpp.js  component_8hpp_source.html  component__options_8hpp.html  component__options_8hpp_source.html  dropdown_8cpp_source.html  examples_2component_2button_8cpp-example.html  examples_2component_2dropdown_custom_8cpp-example.html  examples_2component_2homescreen_8cpp-example.html  functions.html  functions_c.html  functions_o.html  functions_r.html  functions_t.html  functions_vars_c.html  functions_vars_o.html  functions_vars_r.html  functions_vars_t.html  hierarchy.html  hierarchy.js  index.html  inherits.html  namespaceftxui.html  namespaceftxui_1_1Container.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  navtreeindex2.js  navtreeindex3.js  navtreeindex4.js  navtreeindex5.js  navtreeindex6.js  (+4 more)
bazel/: copts.bzl
examples/component/: BUILD.bazel  ftxui_example_button.js  ftxui_example_button.wasm  ftxui_example_button_animated.wasm  ftxui_example_button_in_frame.wasm  ftxui_example_button_style.wasm  ftxui_example_canvas_animated.wasm  ftxui_example_checkbox.wasm  ftxui_example_checkbox_in_frame.wasm  ftxui_example_collapsible.wasm  ftxui_example_composition.wasm  ftxui_example_custom_loop.wasm  ftxui_example_dropdown.js  ftxui_example_dropdown.wasm  ftxui_example_dropdown_custom.js  ftxui_example_dropdown_custom.wasm  ftxui_example_flexbox_gallery.wasm  ftxui_example_focus.wasm  ftxui_example_focus_cursor.wasm  ftxui_example_gallery.wasm  ftxui_example_homescreen.wasm  ftxui_example_input.wasm  ftxui_example_input_style.wasm  ftxui_example_linear_gradient_gallery.wasm  ftxui_example_maybe.wasm  ftxui_example_menu.wasm  ftxui_example_menu2.wasm  ftxui_example_menu_entries.wasm  ftxui_example_menu_entries_animated.wasm  ftxui_example_menu_in_frame.wasm  ftxui_example_menu_in_frame_horizontal.wasm  ftxui_example_menu_multiple.wasm  ftxui_example_menu_style.wasm  ftxui_example_menu_underline_animated_gallery.wasm  ftxui_example_modal_dialog.wasm  ftxui_example_modal_dialog_custom.wasm  ftxui_example_nested_screen.wasm  ftxui_example_print_key_press.wasm  ftxui_example_radiobox.wasm  ftxui_example_radiobox_in_frame.wasm  (+11 more)
examples/dom/: BUILD.bazel
include/ftxui/screen/: color.hpp
search/: all_0.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+112 more)
src/ftxui/screen/: color.cpp
